Fix spacing of labels

--- a/app/sass/experience.sass
+++ b/app/sass/experience.sass
@@ -9,54 +9,48 @@
 
     a.normal
         color: inherit
-    span.label
-        margin-right: 0.5em
+    .label
+        line-height: 2.5em
+        margin: 0 0.25em
     img.project-logo
         height: 3.5em
-
-    &.hide
-        display: none
+    p
+        color: inherit
 
 .project-showcase-evlgaming
     background-color: #EEE
-    p
-        color: #000
+    color: #000
     .label
         background-color: rgba(0, 0, 0, 0.05)
 
 .project-showcase-saloon
     background-color: #1D1D1D
-    p
-        color: #EEE
+    color: #EEE
     .label
         background-color: rgba(255, 255, 255, 0.05)
 
 .project-showcase-sanmargar
     background-color: #F6F6F6
-    p
-        color: #000
+    color: #000
     .label
         background-color: rgba(0, 0, 0, 0.05)
 
 .project-showcase-tryhard
     background-color: #222
-    p
-        color: #EEE
+    color: #EEE
     .label
         background-color: rgba(255, 255, 255, 0.05)
 
 .project-showcase-etf2l
     background-color: #1F2938
+    color: #EEE
     a
-        color: #EEE
-    p
         color: #EEE
     .label
         background-color: rgba(255, 255, 255, 0.05)
 
 .project-showcase-tf2center
     background-color: #EBE6D6
-    p
-        color: #000
+    color: #000
     .label
         background-color: rgba(0, 0, 0, 0.05)
